[package]
name = "src5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "src5"
path = "src/src5/lib.rs"

[[bin]]
name = "src5"
doc = false

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = { version = "4.3.5", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
