[package]
name = "src5-rs"
description = "Utility for generating SRC5 interfaces ids from Cairo traits"
homepage = "https://github.com/ericnordelo/src5-rs"
version = "2.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ericnordelo/src5-rs"
keywords = ["cairo", "interface", "src5", "erc165", "introspection"]
categories = ["command-line-utilities"]

[lib]
name = "src5_rs"
path = "src/src5_rs/lib.rs"

[[bin]]
name = "src5_rs"
doc = false

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
cairo-lang-compiler = "=2.0.0-rc4"
cairo-lang-diagnostics = "=2.0.0-rc4"
cairo-lang-filesystem = "=2.0.0-rc4"
cairo-lang-parser = "=2.0.0-rc4"
cairo-lang-starknet = "=2.0.0-rc4"
cairo-lang-syntax = "=2.0.0-rc4"
cairo-lang-utils = "=2.0.0-rc4"
clap = { version = "4.3.5", features = ["derive"] }
dotenv = "0.15.0"
num-bigint = "0.4.3"
prettytable-rs = "^0.10"
tokio = { version = "1.28.2", features = ["full"] }
